# Ed4All

./: .dockerignore  .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  CODE_REVIEW_PIPELINE.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  VERSIONING.md  conftest.py  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: ci.yml
Courseforge/: CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  SECURITY.md
Courseforge/agents/: CLAUDE.md  accessibility-remediation.md  brightspace-packager.md  content-analyzer.md  content-generator.md  content-quality-remediation.md  course-outliner.md  dart-automation-coordinator.md  educational-standards.md  exam-research.md  html-design-research.md  imscc-intake-parser.md  intelligent-design-mapper.md  objective-synthesizer.md  oscqr-course-evaluator.md  quality-assurance.md  remediation-validator.md  requirements-collector.md  source-router.md  textbook-ingestor.md
Courseforge/config/: block_routing.yaml  pedagogical_query_patterns.json
Courseforge/docs/: PATTERN_PREVENTION_GUIDE.md  getting-started.md  per-week-learning-objectives.md  template-chrome-roles.md  troubleshooting.md  workflow-reference.md
Courseforge/generators/: __init__.py  _base.py  _outline_provider.py  _provider.py  _rewrite_provider.py
Courseforge/imscc-standards/: CLAUDE.md  imscc-variables-reference.md
Courseforge/lib/: learning_science_advisor.py
Courseforge/router/: __init__.py  inter_tier_gates.py  policy.py  remediation.py  router.py
Courseforge/schemas/: Claude.md  README.md
Courseforge/scripts/: blocks.py  generate_course.py  package_multifile_imscc.py  validate_page_objectives.py
Courseforge/templates/: chunk_templates.md  educational_html_templates.md
Courseforge/tests/: test_chunk_template_consumability.py  test_content_generator_provider.py  test_content_generator_spec_misconceptions.py
DART/: CLAUDE.md  README.md  __init__.py  convert.py  multi_source_interpreter.py  pyproject.toml
DART/converter/: __init__.py  block_roles.py  block_segmenter.py  block_templates.py  cross_refs.py  document_assembler.py  extractor.py  heuristic_classifier.py  llm_classifier.py  mathml.py  page_chrome.py  sidecars.py
DART/pdf_converter/: __init__.py  alt_text_generator.py  capture_integration.py  claude_processor.py  cli.py  converter.py  embed_images.py  image_extractor.py  math_processor.py  wcag_enhancer.py  wcag_validator.py
DART/templates/: gold_standard.html  wcag22_css.py
DART/tests/: test_alt_text_generator_capture_wiring.py  test_alt_text_runtime_wiring.py  test_article_body_nesting.py  test_chapter_id_dedup.py  test_chapter_promotion_guards.py  test_converter.py  test_converter_pipeline.py  test_cross_refs.py  test_document_assembler_enrichment.py  test_dotted_numeric_headings.py  test_env_var_model_resolution.py  test_extractor.py  test_extractor_page_chrome_integration.py  test_figure_persistence.py  test_font_size_heading_promotion.py  test_footnote_guard.py  test_legacy_contract.py  test_list_detection.py  test_llm_classifier.py  test_llm_classifier_capture_wiring.py  test_mathml.py  test_numbered_subheading_guard.py  test_page_chrome.py  test_pagebreak_anchors.py  test_pipeline_flip.py  test_pipeline_run_attribution.py  test_provenance_emit.py  test_pymupdf_extractors.py  test_section_anchors.py  test_structured_blocks.py  test_toc_segmentation.py  test_wcag_validator_semantic.py
LibV2/: CLAUDE.md  README.md  instructions.md  requirements.txt
LibV2/catalog/: cross_package_concepts.json
LibV2/ontology/: taxonomy.json
MCP/: __init__.py  server.py
Trainforge/: CLAUDE.md  README.md  __init__.py  align_chunks.py  architecture.md  curriculum.py  instruction_pair_extractor.py  pedagogy_graph_builder.py  process_course.py  retag_outcomes.py  synthesize_training.py  train_course.py
ci/: integrity_check.py
cli/: __init__.py  main.py
config/: agents.yaml  workflows.yaml
docs/: LICENSING.md
ed4all-chunker/: README.md  pyproject.toml
ed4all-chunker/ed4all_chunker/: __init__.py  boilerplate.py  chunker.py  helpers.py
ed4all-chunker/tests/: test_chunker_smoke.py
examples/: README.md  sample_course_data.json  sample_objectives.json
lib/: __init__.py  audit_logger.py  config.py  constants.py  content_store.py  decision_capture.py  error_taxonomy.py  hash_chain.py  leak_checker.py  libv2_fsck.py  libv2_storage.py  logging_config.py  path_constants.py  paths.py  provenance.py  quality.py  quality_feedback.py  replay_engine.py  run_context_builder.py  run_finalizer.py  run_manager.py  secrets_filter.py  secure_paths.py  sequence_manager.py  state_manager.py  streaming_capture.py  tool_registry.py  trainforge_capture.py  validation.py  vocabularies.py  write_facade.py
orchestrator/: __init__.py
plans/: README.md  courseforge_architecture_handoff.docx  courseforge_architecture_roadmap.md  courseforge_architecture_v2.docx  phase1_tos_unblock.md  phase1_tos_unblock_detailed.md  phase2_intermediate_format.md  phase2_intermediate_format_detailed.md  phase3_5_post_rewrite_validation.md  phase3_two_pass_router.md  phase3_two_pass_router_detailed.md  phase4_statistical_tier.md  phase4_statistical_tier_detailed.md  phase5_independent_stages.md  phase6_abcd_concept_extractor.md  phase7_chunker_dual_chunkset.md  phase8_cleanup.md  post-phase8-review-2026-05.md
schemas/: ONTOLOGY.md  ONTOLOGY_LO_AUDIT.md  README.md  audit_event_schema.json  concept_graph_semantic.schema.json  decision_event_schema.json  hash_chained_event_schema.json  instruction_pair.schema.json  run_manifest_schema.json  session_annotation_schema.json  trainforge_decision_schema.json
scripts/: calibrate_phase4_thresholds.py  wave75_classify_concept_graph.py  wave75_regen_objectives.py  wave75_regen_pedagogy.py  wave76_clean_concept_graph.py  wave76_normalize_chunks.py  wave76_regen_pedagogy.py  wave76_regen_quality_report.py  wave76_retag_chunks.py  wave78_complete_pedagogy.py  wave81_harvest_pitfall_misconceptions.py  wave81_reclassify_chunks.py  wave97_rebuild_pedagogy_graph_mc_nodes.py
tests/: test_pipeline_integration.py
(+1063 files in other folders)
