[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ed4all"
version = "0.2.0"
description = "Unified orchestration for accessible educational content"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
keywords = ["education", "accessibility", "wcag", "imscc", "lms"]

dependencies = [
    "beautifulsoup4>=4.12.0,<5.0.0",
    "lxml>=4.9.0,<6.0.0",
    "pyyaml>=6.0.0,<7.0.0",
    "click>=8.0.0,<9.0.0",
    "rich>=13.0.0,<14.0.0",
    "jsonschema>=4.17.0,<5.0.0",
]

[project.optional-dependencies]
dart = [
    "pdf2image>=1.16.0,<2.0.0",
    "pytesseract>=0.3.10,<1.0.0",
    "Pillow>=10.0.0,<12.0.0",
    "pdfplumber>=0.10.0,<1.0.0",
    "PyMuPDF>=1.23.0,<2.0.0",
    "anthropic>=0.18.0,<1.0.0",
]
dev = [
    "pytest>=7.0.0,<9.0.0",
    "pytest-cov>=4.0.0,<6.0.0",
    "pytest-asyncio>=0.21.0,<1.0.0",
    "black>=23.0.0,<25.0.0",
    "ruff>=0.1.0,<1.0.0",
]
full = ["ed4all[dart,dev]"]

[project.scripts]
ed4all = "cli.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["lib*", "MCP*", "cli*"]

[tool.coverage.run]
source = ["lib", "MCP", "cli"]
branch = true
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
fail_under = 75
show_missing = true

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "C90", "UP"]
ignore = ["UP006", "UP035", "UP045", "E501", "E741", "E402", "C901"]

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
