[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ed4all"
version = "0.2.2"
description = "Unified orchestration for accessible educational content"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
keywords = ["education", "accessibility", "wcag", "imscc", "lms"]

dependencies = [
    "beautifulsoup4>=4.12.0,<5.0.0",
    "lxml>=4.9.0,<6.0.0",
    "pyyaml>=6.0.0,<7.0.0",
    "click>=8.0.0,<9.0.0",
    "rich>=13.0.0,<14.0.0",
    "jsonschema>=4.17.0,<5.0.0",
    "pydantic>=2.0.0,<3.0.0",
    "rdflib>=7.0.0,<8.0.0",
    "pyld>=2.0.0,<4.0.0",
    "pyshacl>=0.25.0,<1.0.0",
]

[project.optional-dependencies]
dart = [
    "pdf2image>=1.16.0,<2.0.0",
    "pytesseract>=0.3.10,<1.0.0",
    "Pillow>=10.0.0,<12.0.0",
    "pdfplumber>=0.10.0,<1.0.0",
    "PyMuPDF>=1.23.0,<2.0.0",
    "anthropic>=0.18.0,<1.0.0",
]
server = [
    "mcp>=1.0.0,<2.0.0",
]
dev = [
    "pytest>=7.0.0,<9.0.0",
    "pytest-cov>=4.0.0,<6.0.0",
    "pytest-asyncio>=0.21.0,<1.0.0",
    "black>=23.0.0,<25.0.0",
    "ruff>=0.1.0,<1.0.0",
    "pyld>=2.0.0,<4.0.0",
    "pyshacl>=0.25.0,<1.0.0",
]
# Wave 90: heavy ML deps for the Trainforge.training submodule.
# Kept out of the default install so CPU-only dev boxes / the MCP
# server don't pull in 5+GB of CUDA wheels. RunPod SDK is reserved
# for the follow-up wave; LocalBackend uses HF transformers + TRL +
# PEFT + bitsandbytes for QLoRA.
training = [
    "torch>=2.1.0",
    "transformers>=4.40.0,<5.0.0",
    "trl>=0.8.0,<1.0.0",
    "peft>=0.10.0,<1.0.0",
    "accelerate>=0.30.0",
    "bitsandbytes>=0.43.0",
    "datasets>=2.18.0",
    "safetensors>=0.4.0",
]
full = ["ed4all[dart,server,dev]"]

[project.scripts]
ed4all = "cli.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["lib*", "MCP*", "cli*"]

[tool.coverage.run]
source = ["lib", "MCP", "cli"]
branch = true
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
fail_under = 75
show_missing = true

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "C90", "UP"]
ignore = ["UP006", "UP035", "UP045", "E501", "E741", "E402", "C901"]

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
