[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ed4all"
version = "0.2.2"
description = "Unified orchestration for accessible educational content"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
keywords = ["education", "accessibility", "wcag", "imscc", "lms"]

dependencies = [
    "beautifulsoup4>=4.12.0,<5.0.0",
    "lxml>=4.9.0,<6.0.0",
    "pyyaml>=6.0.0,<7.0.0",
    "click>=8.0.0,<9.0.0",
    "rich>=13.0.0,<14.0.0",
    "jsonschema>=4.17.0,<5.0.0",
    "pydantic>=2.0.0,<3.0.0",
    "rdflib>=7.0.0,<8.0.0",
    "pyld>=2.0.0,<4.0.0",
    "pyshacl>=0.25.0,<1.0.0",
    # Phase 8 Subtask 8: pytest-asyncio is a default dependency (not a
    # [dev] extra) because the project's CI exercises async-test paths
    # even on default installs (sample: MCP/tests/test_executor_dispatch_routing.py
    # is collected by pytest.ini::testpaths = MCP/tests). Leaving the
    # dep in [dev] silently routed @pytest.mark.asyncio decorations
    # through pytest's missing-plugin path on a bare ``pip install -e .``
    # install. Pair with pytest.ini::asyncio_mode = auto so decoration
    # triggers without per-test fixture wiring.
    "pytest-asyncio>=0.21.0,<1.0.0",
    # Phase 7a Subtask 7: in-repo workspace member at
    # ``./ed4all-chunker``. Declared as a PEP 508 direct-reference
    # dependency with a relative ``file:`` URL so ``pip install -e
    # /home/user/Ed4All`` automatically pulls the chunker package in
    # without a separate install step. The chunker carries the lifted
    # ``_chunk_content`` / ``_chunk_text_block`` surface from
    # ``Trainforge/process_course.py`` (Subtasks 4 + 6) and is the
    # canonical chunker for the future DART + IMSCC dual-chunkset
    # pipeline (Phase 7b + 7c). PyPI promotion deferred to when an
    # external consumer surfaces (per roadmap §6.2 recommendation).
    "ed4all-chunker @ file:./ed4all-chunker",
]

[project.optional-dependencies]
dart = [
    "pdf2image>=1.16.0,<2.0.0",
    "pytesseract>=0.3.10,<1.0.0",
    "Pillow>=10.0.0,<12.0.0",
    "pdfplumber>=0.10.0,<1.0.0",
    "PyMuPDF>=1.23.0,<2.0.0",
    "anthropic>=0.18.0,<1.0.0",
]
server = [
    "mcp>=1.0.0,<2.0.0",
]
dev = [
    "pytest>=7.0.0,<9.0.0",
    "pytest-cov>=4.0.0,<6.0.0",
    # Phase 8 Subtask 8: ``pytest-asyncio`` was promoted to a default
    # ``[project].dependencies`` entry above; the [dev] mention here is
    # intentionally removed to avoid a duplicate-pin conflict.
    "black>=23.0.0,<25.0.0",
    "ruff>=0.1.0,<1.0.0",
    "pyld>=2.0.0,<4.0.0",
    "pyshacl>=0.25.0,<1.0.0",
]
# Wave 90: heavy ML deps for the Trainforge.training submodule.
# Kept out of the default install so CPU-only dev boxes / the MCP
# server don't pull in 5+GB of CUDA wheels. RunPod SDK is reserved
# for the follow-up wave; LocalBackend uses HF transformers + TRL +
# PEFT + bitsandbytes for QLoRA.
#
# Wave 100: pin trl 0.12.x + transformers 4.46–4.49 because trl 0.13+
# renamed SFTConfig.max_seq_length → max_length and tightened the
# DPOTrainer model arg shape, breaking Wave 90's
# Trainforge/training/peft_trainer.py wiring. The Wave 99 worker
# manually downgraded to trl==0.12.2 + transformers==4.46.3 +
# tokenizers==0.20.3 to make training work; this pin makes that
# combination the default resolved set for ``ed4all[training]``.
#
# Audit 2026-04-30 (Phase B): three pins co-evolved to resolve a
# four-way constraint conflict. The combinations that DON'T work:
#
#   accelerate>=1.0 + transformers<4.49  → AttributeError: 'frozenset'
#                                          has no attribute 'discard'
#                                          (accelerate calls .discard()
#                                          on a frozenset attr that
#                                          older transformers shipped
#                                          as immutable; fix landed in
#                                          transformers 4.49+).
#
#   bitsandbytes<0.45                    → fragile CUDA self-test
#                                          (``CUDA is required but not
#                                          available``) + imports the
#                                          deprecated ``triton.ops``
#                                          namespace removed in
#                                          triton 3.0+.
#
#   bitsandbytes>=0.46 + accelerate<1.0  → bnb 0.46 hard-depends on
#                                          accelerate>=1.0 so the
#                                          resolver silently bumps
#                                          accelerate to 1.x, which
#                                          re-trips the frozenset bug
#                                          unless transformers is also
#                                          on 4.49+.
#
# Working band: transformers>=4.49 + accelerate>=1.0 + bnb>=0.45. trl
# 0.12.x supports transformers 4.49, peft is unconstrained in this
# band. The BitsAndBytesConfig shape this codebase uses (``nf4`` +
# ``bnb_4bit_compute_dtype=torch.float16`` + double-quant) is fully
# supported in 0.45+.
training = [
    "torch>=2.1.0",
    "transformers>=4.49.0,<4.50.0",
    "trl>=0.12,<0.13",
    "peft>=0.10.0,<1.0.0",
    "accelerate>=1.0.0,<2.0.0",
    "bitsandbytes>=0.45.0,<0.47.0",
    "datasets>=2.18.0",
    "safetensors>=0.4.0",
    # Wave 101: optional generic-benchmark sanity floor via the
    # EleutherAI lm-evaluation-harness. Wired through
    # ``Trainforge/eval/lm_eval_wrapper.py``; gated at runtime by
    # ``LM_EVAL_ENABLED=true`` because a 3-task sweep adds ~5 min on
    # an RTX 3070. The wrapper handles missing-package gracefully so
    # this pin is only required when LM_EVAL_ENABLED is set.
    "lm-eval>=0.4.0,<1.0.0",
]
# Phase 4 Subtask 7: optional embedding deps for the statistical-tier
# validators in `lib/embedding/`. Kept out of the default install so
# CPU-only dev boxes don't pull in torch + transformers wheels just to
# run the orchestrator. Validators degrade to warning-severity
# `EMBEDDING_DEPS_MISSING` GateIssues when the extras are absent (per
# `lib/embedding/sentence_embedder.py::try_load_embedder`); strict-mode
# opt-in via `TRAINFORGE_REQUIRE_EMBEDDINGS=true` flips to critical.
embedding = [
    "sentence-transformers>=2.5.0,<4.0.0",
    "numpy>=1.24.0",
    "transformers>=4.49,<4.50",
    "torch>=2.0.0",
]
full = ["ed4all[dart,server,dev]"]

[project.scripts]
ed4all = "cli.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["lib*", "MCP*", "cli*"]

[tool.coverage.run]
source = ["lib", "MCP", "cli"]
branch = true
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
fail_under = 75
show_missing = true

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "C90", "UP"]
ignore = ["UP006", "UP035", "UP045", "E501", "E741", "E402", "C901"]

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
