[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ed4all-chunker"
version = "0.1.0"
description = "Canonical chunker for Ed4All pipeline (DART + IMSCC)"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
keywords = ["education", "chunking", "rag", "ed4all"]

# Phase 7a Subtask 1: package skeleton only — runtime dependencies
# (beautifulsoup4, lxml) are introduced by Subtasks 2-4 when the
# boilerplate detector + chunker functions land. Keeping the
# dependency list empty here makes the scaffolding install a pure
# no-op import surface and avoids prematurely committing to specific
# pins that the actual chunker code will validate against.
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0,<9.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["ed4all_chunker*"]
