[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ed4all-chunker"
version = "0.1.0"
description = "Canonical chunker for Ed4All pipeline (DART + IMSCC)"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
keywords = ["education", "chunking", "rag", "ed4all"]

# Phase 7a Subtask 2: the lifted ``boilerplate.py`` is pure stdlib
# (re, collections, dataclasses, typing) so no runtime deps are
# required at this stage. Subtasks 3 (HTML helpers — section
# extraction, plain-text strip) and 4 (the chunker proper) introduce
# ``beautifulsoup4`` and ``lxml`` when those surfaces land; the pins
# in the parent ``pyproject.toml`` (``beautifulsoup4>=4.12.0,<5.0.0``)
# are the source of truth to mirror at that point.
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0,<9.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["ed4all_chunker*"]
