[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ed4all-chunker"
version = "0.1.0"
description = "Canonical chunker for Ed4All pipeline (DART + IMSCC)"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
keywords = ["education", "chunking", "rag", "ed4all"]

# Phase 7a Subtask 3: the lifted ``helpers.py`` is also pure stdlib —
# the four ``re``-driven helpers are self-contained and the lone
# ``extract_plain_text`` defers to ``Trainforge.parsers.html_content_parser.HTMLTextExtractor``
# via a lazy in-function import (so the chunker package doesn't load
# Trainforge at import time, only at call time). No new runtime deps
# at this stage. Subtask 4 (the chunker proper) may introduce
# ``beautifulsoup4`` and ``lxml`` when those surfaces land; the pins
# in the parent ``pyproject.toml`` (``beautifulsoup4>=4.12.0,<5.0.0``)
# are the source of truth to mirror at that point.
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0,<9.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["ed4all_chunker*"]
